theme/css/custom.css
.navbar {
  min-height: 60px;
  font-size: 15px;
}

.navbar-nav>li>.dropdown-menu {
  font-size: 15px;
  top: 85px !important;
}

.navbar-fixed-top .dropdown .dropdown-menu a {
  padding: 5px 20px;
}

.navbar-brand {
  height: 60px;
  display: block;
  padding: 14px 35px 6px 0;
}

.navbar-fixed-top .navbar-brand img {
  height: 40px;
  margin: 0;
}

.navbar-nav > li > a {
  padding-top: 17.5px;
  padding-bottom: 17.5px;
  font-weight: bold;
}

.bs-sidebar .nav .nav {
  display: block;
}

.container img {
  max-width: 100%;
  margin: 10px 0;
}

.user1 {
  font-weight: bold;
  color: blue;
}

.user2 {
  font-weight: bold;
  color: darkorange;
}

.note, .tip, .warning {
  padding: 20px;
  margin: 15px 0;
  border-radius: 4px;
  line-height: 19pt;
}

.note {
  color: #31708f;
  background-color: #d9edf7;
  border: 1px solid #bce8f1;
}

.tip {
  color: #3c763d;
  background-color: #dff0d8;
  border: 1px solid #d6e9c6;
}

.warning {
  color: #806600;
  background-color: #ffeb99;
  border: 1px solid #ffcc00;
}

.note strong, .tip strong, .warning strong {
  text-transform: uppercase;
  font-size: 19px;
}

.note code {
  background: none;
  font-size: 100%;
}

.note strong:before {
  content: "\f05a";
  font-family: FontAwesome;
  padding-right: 5px;
  font-size: 19px;
}

.tip strong:before {
  content: "\f06a";
  font-family: FontAwesome;
  padding-right: 5px;
  font-size: 19px;
}

.warning strong:before {
  content: "\f071";
  font-family: FontAwesome;
  padding-right: 5px;
  font-size: 19px;
}

@media (min-width: 1200px) {
  .container {
    width: 100%;
    max-width: 1300px;
  }
}

@media (max-width: 667px) {
  code {
    overflow-wrap: break-word;
  }

  .table-wrapper {
    overflow-x: scroll;
    max-width: 100%;
    width: 100%;
  }
}

#disqus_thread {
  margin: 50px 0;
}

p.next-page {
  margin: 40px 0;
}

.chapter-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  margin-bottom: 50px;
}

.chapter-item {
  display: flex;
  flex-flow: column nowrap;
  justify-content: space-between;
  width: 250px;
  height: 250px;
  margin: 20px;
  padding: 20px;
  color: inherit;
  font-weight: bold;
  text-align: center;
}

.chapter-item:hover {
  background: #fafafa;
  text-decoration: none;
  color: inherit;
}

.chapter-icon {
  color: darkorange;
  justify-self: flex-start;
  font-size: 75px;
  text-shadow:
          -1px -1px #a85400, -1px 1px #a85400, 1px -1px #a85400, 1px 1px #a85400;
}

.chapter-item:hover .chapter-icon {
  transform: translate(0, 3px);
  text-shadow:
          -1px -1px #a85400, -1px 1px #a85400, 1px -1px #a85400, 1px 1px #a85400,
          0 -2px #a85400,
          0 -3px #a85400;
}

.chapter-heading {
  font-size: 130%;
}

.chapter-info {
  color: #a85400;
  white-space: nowrap;
}

.search-form {
  position: relative;
  margin: 10.5px 0;
}

.form-control.search-input {
  transition: all .5s;
  width: 100%;
  height: 39px;
  padding-left: 28px;
  font-size: 15px;
  font-weight: bold;
}

.search-results {
  display: none;
  background: white;
  border: 1px solid lightgray;
  position: absolute;
  top: 50px;
  right: 0;
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
  padding: 0;
  width: 100%;
  height: 500px;
  overflow-x: hidden;
  overflow-y: scroll;
  z-index: 1;
}

@media (min-width: 1000px) {
  .form-control.search-input {
    width: 150px;
  }

  .form-control.search-input:focus, .search-form:hover .form-control.search-input {
    width: 250px;
  }

  .search-results {
    width: 400px;
  }
}

.search-input:focus + .search-results, .search-form:hover .search-results {
  display: flex;
  flex-flow: column nowrap;
}

.search-no-results {
  margin: auto auto;
}

a.search-result {
  text-decoration: none;
  display: block;
  padding: 10px;
  border-top: 1px solid #ccc;
  outline: 0;
  color: inherit;
}
a.search-result:focus, a.search-result:hover {
  background: #eeeeee;
}

.search-result-title {
  font-weight: bold;
  font-size: 110%;
  margin: 0 0 5px 0;
  padding: 0;
}

.search-result-summary {
  margin: 0;
  padding: 0;
}

.search-form-group {
  position: relative;
}
.search-icon {
  position: absolute;
  left: 10px;
  top: 12px;
}
#footer {
  z-index: 1;
  position: relative;
}

